--- a/assets/css/count.css
+++ b/assets/css/count.css
@@ -92,6 +92,5 @@ main {
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
+  width: 100%;
 }
